--- a/playbooks/fedora-post-install.yaml
+++ b/playbooks/fedora-post-install.yaml
@@ -206,4 +206,29 @@
       command: xdg-mime default org.gnome.Totem.desktop audio/3gpp audio/3gpp2 audio/aac audio/ac3 audio/AMR audio/AMR-WB audio/basic audio/dv audio/eac3 audio/flac audio/m4a audio/midi audio/mp1 audio/mp2 audio/mp3 audio/mp4 audio/mpeg audio/mpegurl audio/mpg audio/ogg audio/opus audio/prs.sid audio/scpls audio/vnd.rn-realaudio audio/wav audio/webm audio/x-aac audio/x-aiff audio/x-ape audio/x-flac audio/x-gsm audio/x-it audio/x-m4a audio/x-m4b audio/x-matroska audio/x-mod audio/x-mp1 audio/x-mp2 audio/x-mp3 audio/x-mpeg audio/x-mpegurl audio/x-mpg audio/x-ms-asf audio/x-ms-asx audio/x-ms-wax audio/x-ms-wma audio/x-musepack audio/x-opus+ogg audio/x-pn-aiff audio/x-pn-au audio/x-pn-realaudio audio/x-pn-realaudio-plugin audio/x-pn-wav audio/x-pn-windows-acm audio/x-realaudio audio/x-real-audio audio/x-s3m audio/x-sbc audio/x-scpls audio/x-shorten audio/x-speex audio/x-stm audio/x-tta audio/x-vorbis audio/x-vorbis+ogg audio/x-wav audio/x-wavpack audio/x-xm
     - name: Set GNOME MPV as default video application
       command: xdg-mime default io.github.GnomeMpv.desktop video/3gp video/3gpp video/3gpp2 video/divx video/dv video/fli video/flv video/mp2t video/mp4 video/mp4v-es video/mpeg video/mpeg-system video/msvideo video/ogg video/quicktime video/vnd.mpegurl video/vnd.rn-realvideo video/webm video/x-avi video/x-flc video/x-fli video/x-flv video/x-m4v video/x-matroska video/x-mpeg video/x-mpeg2 video/x-mpeg-system video/x-ms-asf video/x-msvideo video/x-ms-wm video/x-ms-wmv video/x-ms-wmx video/x-nsv video/x-ogm+ogg video/x-theora video/x-theora+ogg
-
+    - name: Enable autoload subtiles for Videos
+      dconf:
+        key: /org/gnome/Totem/autoload-subtitles
+        value: boolean true
+    - name: Set subtile encoding for Videos
+      dconf:
+        key: /org/gnome/Totem/subtitle-encoding
+        value: "'WINDOWS-1250'"
+    - name: Install Powerline
+      become: yes
+      dnf:
+        name: powerline,powerline-fonts
+        state: latest
+    - name: Install Powerline Gitstatus
+      become: yes
+      pip:
+        name: powerline-gitstatus
+        executable: pip3
+    - name: Prepare to configure Powerline
+      file:
+        path: "{{ansible_env.HOME}}/.config/powerline/{{item}}"
+        recurse: yes
+        state: directory
+      with_items:
+        - themes/shell
+        - colorschemes
