--- a/playbooks/fedora-post-install.yaml
+++ b/playbooks/fedora-post-install.yaml
@@ -195,6 +195,10 @@
       install: yes
     processing:
       install: yes
+    mailspring:
+      install: no
+    master_pdf_editor:
+      install: no
   tasks:
     - name: Update all packages
       become: yes
@@ -305,3 +309,10 @@
       when: postman.install
     - include: includes/processing.yaml version=3.3.7
       when: processing.install
+    - include: includes/mailspring.yaml
+      when: mailspring.install
+    - name: Install Master PDF Editor
+      become: yes
+      dnf:
+        name: https://code-industry.net/public/master-pdf-editor-5.0.36_qt5.x86_64.rpm
+      when: master_pdf_editor.install
