--- a/playbooks/includes/flathub-flatpak.yaml
+++ b/playbooks/includes/flathub-flatpak.yaml
@@ -1,6 +1,2 @@
 - name: Install {{item.name}} from Flathub
-  flatpak:
-    name: "{{item.ref}}"
-    state: present
-    remote: flathub
-    method: user
+  command: "flatpak install --user -y --reinstall flathub {{item.ref}}"
