--- a/playbooks/fedora-post-install.yaml
+++ b/playbooks/fedora-post-install.yaml
@@ -272,7 +272,8 @@
     - include: includes/yarn.yaml
       when: yarn.install
     - name: Add Flathub flatpak repository
-      command: flatpak remote-add --user --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+      become: yes
+      command: flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
       when: flathub_flatpaks|selectattr('install')|list|count
     - include: "includes/flathub-flatpak.yaml flatpak={{item}}"
       loop: "{{flathub_flatpaks|selectattr('install')|list}}"
